feat: several changes around attribute migration
